--- a/src/assets/styles/components/main-procedures.scss
+++ b/src/assets/styles/components/main-procedures.scss
@@ -2,19 +2,19 @@
   position: relative;
   padding-top: 30px;
   background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(39, 104, 201, 0.07) 100%);
-  @include screen(tablet-2x) {
+  @include min-screen(tablet-2x) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
     background-image: none;
   }
-  @include screen(laptop) {
+  @include min-screen(laptop) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
     background-image: none;
   }
-  @include screen(desktop) {
+  @include min-screen(desktop) {
     padding-top: 45px;
     padding-bottom: 45px;
     background-color: $bg-blue;
@@ -29,30 +29,30 @@
     &--mobile {
       margin-top: 30px;
       padding-bottom: 70px;
-      @include screen(tablet-2x) {
+      @include min-screen(tablet-2x) {
         display: none;
       }
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         display: none;
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         display: none;
       }
     }
     &--laptop {
       display: none;
       gap: 24px;
-      @include screen(tablet-2x) {
+      @include min-screen(tablet-2x) {
         display: grid;
         margin-top: 40px;
         grid-template-columns: 1fr 416px;
       }
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         display: grid;
         margin-top: 40px;
         grid-template-columns: 1fr 416px;
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         display: grid;
         margin-top: 40px;
         grid-template-columns: 1fr 416px;
@@ -66,17 +66,14 @@
     gap: 20px;
   }
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-  }
-
   &__number {
     font-size: 36px;
     font-weight: 700;
     line-height: 40px;
     color: $black-400;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
   }
 
   &__name {
@@ -122,10 +119,10 @@
       height: 100%;
       object-fit: contain;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       display: block;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       display: block;
     }
   }
@@ -141,7 +138,7 @@
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 12px;
     &-large {
       max-height: 208px;
       max-width: 500px;
@@ -156,12 +153,12 @@
     max-width: max-content;
     color: $blue-500;
     transition: color $transition-default;
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       &:hover {
         color: $orange-500;
       }
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       &:hover {
         color: $orange-500;
       }
@@ -181,19 +178,19 @@
     transform: translateY(50%) translateX(-50%);
     left: 50%;
     width: 100%;
-    @include screen(tablet) {
+    @include min-screen(tablet) {
       max-width: 319px;
       margin: 30px auto 0;
     }
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       max-width: 319px;
       margin: 30px auto 0;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       max-width: 319px;
       margin: 30px auto 0;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       max-width: 319px;
       margin: 30px auto 0;
     }
@@ -224,11 +221,11 @@
         color: $orange-500;
       }
     }
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       margin-top: 66px;
       width: max-content;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       margin-top: 66px;
       width: max-content;
       &:hover {
@@ -237,7 +234,7 @@
         }
       }
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       margin-top: 66px;
       width: max-content;
       &:hover {
