--- a/src/assets/styles/utils/mixins.scss
+++ b/src/assets/styles/utils/mixins.scss
@@ -1,10 +1,66 @@
-@mixin screen($breakpoint) {
+@mixin min-screen($breakpoint) {
   @if $breakpoint == desktop {
-    @media only screen and (min-width: 1536px) {
+    @media (min-width: 1536px) {
       @content;
     }
   }
 
+  @if $breakpoint == laptop {
+    @media (min-width: 1280px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tablet-2x {
+    @media (min-width: 1024px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tablet {
+    @media (min-width: 768px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == mobile {
+    @media (min-width: 640px) {
+      @content;
+    }
+  }
+}
+
+// ______________________
+
+@mixin max-screen($breakpoint) {
+  @if $breakpoint == laptop {
+    @media (max-width: 1535px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tablet-2x {
+    @media (max-width: 1279px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tablet {
+    @media (max-width: 1023px) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == mobile {
+    @media (max-width: 767px) {
+      @content;
+    }
+  }
+}
+
+// ______________________
+
+@mixin mm-screen($breakpoint) {
   @if $breakpoint == laptop {
     @media (min-width: 1280px) and (max-width: 1535px) {
       @content;
@@ -19,46 +75,6 @@
 
   @if $breakpoint == tablet {
     @media (min-width: 768px) and (max-width: 1023px) {
-      @content;
-    }
-  }
-
-  @if $breakpoint == mobile {
-    @media (min-width: 640px) and (max-width: 767px) {
-      @content;
-    }
-  }
-}
-
-// ______________________
-
-@mixin max-screen($breakpoint) {
-  @if $breakpoint == desktop {
-    @media only screen and (max-width: 1535px) {
-      @content;
-    }
-  }
-
-  @if $breakpoint == laptop {
-    @media only screen and (max-width: 1279px) {
-      @content;
-    }
-  }
-
-  @if $breakpoint == tablet-2x {
-    @media only screen and (max-width: 1023px) {
-      @content;
-    }
-  }
-
-  @if $breakpoint == tablet {
-    @media only screen and (max-width: 767px) {
-      @content;
-    }
-  }
-
-  @if $breakpoint == mobile {
-    @media only screen and (max-width: 639px) {
       @content;
     }
   }
