--- a/src/views/components/main-about.pug
+++ b/src/views/components/main-about.pug
@@ -3,8 +3,7 @@ section.main-about
     .main-about__wrapper
       .main-about__header
         h2 Почему клиенты выбирают «Путевка»
-        a(href="/") 
-          +button-transparent('О компании')
+        +button-transparent('О компании', '#')
       .main-about__items
         .main-about__item
           svg(width="48" height="48" viewBox="0 0 48 48")
@@ -37,5 +36,4 @@ section.main-about
           h3.main-about__title Удобные способы оплаты
           p.main-about__text По счету в банке, картой на сайте, в терминале, наличными в офисе – мы позаботились, чтобы оплатить путевку было быстро и легко
       .main-about__buttons
-        a(href="/") 
-          +button-transparent('О компании Путевка .ком .ру')
+        +button-transparent('О компании Путевка .ком .ру', '#')
