--- a/src/views/components/main-faq.pug
+++ b/src/views/components/main-faq.pug
@@ -1,18 +1,18 @@
 section.main-faq
-  .wrapper
+  .wide-wrapper
     .main-faq__wrapper
       .main-faq__blocks
-        .main-faq__block.main-faq__block--cian
+        .main-faq__block.main-faq__block--cyan
           a(href="/")
             span.visually-hidden Как забронировать и оплатить путевку
-          .wrapper
+          .inner-wrapper
             .main-faq__container
               .main-faq__bg
                 picture
                   source(
-                    srcset="/assets/images/main-faq/bg-cian-2.svg" 
+                    srcset="/assets/images/main-faq/bg-cyan-2.svg" 
                     media="(min-width: 1024px)") 
-                  img(src="/assets/images/main-faq/bg-cian.svg", alt="bg-cian")
+                  img(src="/assets/images/main-faq/bg-cyan.svg", alt="bg-cyan")
               .main-faq__top
                 .main-faq__title
                   svg.main-faq__icon(width="30" height="26" viewBox="0 0 30 26")
@@ -27,7 +27,7 @@ section.main-faq
         .main-faq__block.main-faq__block--blue
           a(href="/")
             span.visually-hidden Сервис бронирования Путевка - лидер по туризму и оздоровлению
-          .wrapper
+          .inner-wrapper
             .main-faq__container
               .main-faq__bg
                 picture
@@ -44,14 +44,14 @@ section.main-faq
                   svg(width="10" height="16" viewBox="0 0 10 16")
                     use(xlink:href="#svg-arrow-right")
               .main-faq__description
-                ul.main-faq__list
+                ul.main-faq__list.list
                   li Более 700 000 клиентов
                   li <a href="#">В нашей команде</a> 80 экспертов по отдыху и оздоролению
                   li Гарантий лучшей цены: уникальные акции и скидки для наших клиентов
         .main-faq__block.main-faq__block--green
           a(href="/")
             span.visually-hidden
-          .wrapper
+          .inner-wrapper
             .main-faq__container
               .main-faq__bg
                 picture
