--- a/src/views/components/main-procedures.pug
+++ b/src/views/components/main-procedures.pug
@@ -6,14 +6,11 @@ section.main-procedures
       h2 Профили лечения и популярные 
       .main-procedures__blocks--mobile
         .main-procedures__items
-          .main-procedures__item
-            h4.main-procedures__number 14
+          h3.main-procedures__number 14
             span.main-procedures__name профилей лечения
-          .main-procedures__item
-            h4.main-procedures__number 86
+          h3.main-procedures__number 86
             span.main-procedures__name процедур
-          .main-procedures__item
-            h4.main-procedures__number 256
+          h3.main-procedures__number 256
             span.main-procedures__name заболеваний
         .main-procedures__buttons
           a(href="/").main-procedures__button
@@ -25,30 +22,49 @@ section.main-procedures
           .main-procedures__image
             img(src="/assets/images/main-procedures/doc.png" alt="doc-procedures" loading="lazy")
           .main-procedures__name Профили лечения
-          .main-procedures__links.main-procedures__links-large
-            a.main-procedures__link(href="/") Гинекология
-            a.main-procedures__link(href="/") ЛОР органы
-            a.main-procedures__link(href="/") Нервная система
-            a.main-procedures__link(href="/") Офтальмология
-            a.main-procedures__link(href="/") Почки и урология
-            a.main-procedures__link(href="/") Кожные заболевания
-            a.main-procedures__link(href="/") Болезни мужской половой сферы
-            a.main-procedures__link(href="/") Нарушение обмена веществ
-            a.main-procedures__link(href="/") Опорно-двигательный аппарат
-            a.main-procedures__link(href="/") Сердечно-сосудистая система
-            a.main-procedures__link(href="/") Органы пищеварения
+          ul.main-procedures__links.main-procedures__links-large
+            li
+              a.main-procedures__link(href="#") Гинекология
+            li
+              a.main-procedures__link(href="#") ЛОР органы
+            li
+              a.main-procedures__link(href="#") Нервная система
+            li
+              a.main-procedures__link(href="#") Офтальмология
+            li
+              a.main-procedures__link(href="#") Почки и урология
+            li
+              a.main-procedures__link(href="#") Кожные заболевания
+            li
+              a.main-procedures__link(href="#") Болезни мужской половой сферы
+            li
+              a.main-procedures__link(href="#") Нарушение обмена веществ
+            li
+              a.main-procedures__link(href="#") Опорно-двигательный аппарат
+            li
+              a.main-procedures__link(href="#") Сердечно-сосудистая система
+            li
+              a.main-procedures__link(href="#") Органы пищеварения
           a(href="/").main-procedures__button
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-activity-heart")
             span Полный справочник по лечению
         .main-procedures__block
           .main-procedures__name Популярные процедуры
-          .main-procedures__links
-            a.main-procedures__link(href="/") Душ шарко
-            a.main-procedures__link(href="/") Амплипульстерапия
-            a.main-procedures__link(href="/") Ванны углекислые и сероводородные
-            a.main-procedures__link(href="/") Массаж лечебно-профилактический
-            a.main-procedures__link(href="/") Грязевые аппликации
-            a.main-procedures__link(href="/") Иглорефлексотерапия (иглоукалывание)
-            a.main-procedures__link(href="/") Подводное вытяжение позвоночника
-            a.main-procedures__link(href="/") Галотерапия/спелеотерапия
+          ul.main-procedures__links
+            li
+              a.main-procedures__link(href="#") Душ шарко
+            li
+              a.main-procedures__link(href="#") Амплипульстерапия
+            li
+              a.main-procedures__link(href="#") Ванны углекислые и сероводородные
+            li
+              a.main-procedures__link(href="#") Массаж лечебно-профилактический
+            li
+              a.main-procedures__link(href="#") Грязевые аппликации
+            li
+              a.main-procedures__link(href="#") Иглорефлексотерапия (иглоукалывание)
+            li
+              a.main-procedures__link(href="#") Подводное вытяжение позвоночника
+            li
+              a.main-procedures__link(href="#") Галотерапия/спелеотерапия
