--- a/src/views/components/main-promo.pug
+++ b/src/views/components/main-promo.pug
@@ -58,6 +58,5 @@ section.main-promo
         svg(width="10" height="16" viewBox="0 0 10 16")
           use(xlink:href="#svg-arrow-right")
       .main-promo__buttons
-        a(href="/") 
-          +button-transparent('Смотреть все акции')
+        +button-transparent('Смотреть все акции', '#')
 
