--- a/src/views/components/main-resorts.pug
+++ b/src/views/components/main-resorts.pug
@@ -162,62 +162,61 @@ section.main-resorts
           }
         )
   .wrapper
-    ul.main-resorts__list
+    ul.main-resorts__list.list
       li 
-        a(href="/") Ставропольский край
+        a(href="#") Ставропольский край
       li 
-        a(href="/") Новгородская область
+        a(href="#") Новгородская область
       li 
-        a(href="/") Ярославская область
+        a(href="#") Ярославская область
       li 
-        a(href="/") Калининградская область
+        a(href="#") Калининградская область
       li 
-        a(href="/") Башкортостан
+        a(href="#") Башкортостан
       li 
-        a(href="/") Татарстан
+        a(href="#") Татарстан
       li 
-        a(href="/") Свердловская область
+        a(href="#") Свердловская область
       li 
-        a(href="/") Кемеровская область
+        a(href="#") Кемеровская область
       li 
-        a(href="/") Челябинская область
+        a(href="#") Челябинская область
       li 
-        a(href="/") Самарская область
+        a(href="#") Самарская область
       li 
-        a(href="/") Нижегородская область
+        a(href="#") Нижегородская область
       li 
-        a(href="/") Пермский край
+        a(href="#") Пермский край
       li 
-        a(href="/") Новосибирская область
+        a(href="#") Новосибирская область
       li 
-        a(href="/") Тюменская область
+        a(href="#") Тюменская область
       li 
-        a(href="/") Дагестан
+        a(href="#") Дагестан
       li 
-        a(href="/") Оренбургская область
+        a(href="#") Оренбургская область
       li 
-        a(href="/") Удмуртия
+        a(href="#") Удмуртия
       li 
-        a(href="/") Иркутская область
+        a(href="#") Иркутская область
       li 
-        a(href="/") Тюменская область
+        a(href="#") Тюменская область
       li 
-        a(href="/") Волгоградская область
+        a(href="#") Волгоградская область
       li 
-        a(href="/") Красноярский край
+        a(href="#") Красноярский край
       li 
-        a(href="/") Тульская область
+        a(href="#") Тульская область
       li 
-        a(href="/") Ростовская область
+        a(href="#") Ростовская область
       li 
-        a(href="/") Кабардино-Балкария
+        a(href="#") Кабардино-Балкария
       li 
-        a(href="/") Карелия
+        a(href="#") Карелия
       li 
-        a(href="/") Коми
+        a(href="#") Коми
       li 
-        a(href="/") Марий Эл
+        a(href="#") Марий Эл
     
     .main-resorts__buttons
-        a(href="/") 
-          +button-transparent('Смотреть все регионы')
+      +button-transparent('Смотреть все регионы', '#')
