--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -3,7 +3,7 @@ $transition-slow: 0.8s;
 
 $container-padding: 20px;
 
-$screen-desktop: 1296px;
+$screen-desktop: 1536px;
 $screen-laptop: 1280px;
 $screen-tablet-2x: 1024px;
 $screen-tablet: 768px;
@@ -24,7 +24,7 @@ $black-400: #263141;
 $black-500: #263238;
 $black-600: #0D192B;
 
-$cian-400: #10A2EC;
+$cyan-400: #10A2EC;
 
 $blue-border: #386AE040;
 $blue-border-light: #2768C926;
