--- a/src/assets/styles/components/main-about.scss
+++ b/src/assets/styles/components/main-about.scss
@@ -2,19 +2,19 @@
   padding-top: 100px;
   padding-bottom: 60px;
   background-image: linear-gradient(180deg, rgba(241, 244, 249, 0) 0%, #F4F6FA 100%);
-  @include screen(tablet-2x) {
+  @include min-screen(tablet-2x) {
     background-color: $bg-blue;
     padding-bottom: 90px;
     padding-top: 45px;
     background-image: none;
   }
-  @include screen(laptop) {
+  @include min-screen(laptop) {
     background-color: $bg-blue;
     padding-bottom: 90px;
     padding-top: 45px;
     background-image: none;
   }
-  @include screen(desktop) {
+  @include min-screen(desktop) {
     background-color: $bg-blue;
     padding-bottom: 90px;
     padding-top: 45px;
@@ -30,13 +30,13 @@
     }
     a {
       display: none;
-      @include screen(tablet-2x) {
+      @include min-screen(tablet-2x) {
         display: inline-block;
       }
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         display: inline-block;
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         display: inline-block;
       }
     }
@@ -48,15 +48,15 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
     column-gap: 20px;
     row-gap: 24px;
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       margin-top: 50px;
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       margin-top: 50px;
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       margin-top: 50px;
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
@@ -67,11 +67,11 @@
       stroke: transparent;
       width: 36px;
       height: 36px;
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         width: 48px;
         height: 48px;
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         width: 48px;
         height: 48px;
       }
@@ -84,12 +84,12 @@
     font-weight: 700;
     line-height: 20px;
     color: $black-400;
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       font-size: 24px;
       line-height: 24px;
       margin-top: 24px;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       font-size: 24px;
       line-height: 24px;
       margin-top: 24px;
@@ -102,12 +102,12 @@
     font-weight: 400;
     line-height: 16px;
     color: $black-300;
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
@@ -119,12 +119,12 @@
       &:active {
         color: $orange-500;
       }
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         &:hover {
           color: $orange-500;
         }
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         &:hover {
           color: $orange-500;
         }
@@ -136,27 +136,27 @@
     margin-top: 30px;
     display: flex;
     justify-content: center;
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       display: none;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       display: none;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       display: none;
     }
     a {
       width: 100%;
-      @include screen(tablet) {
+      @include min-screen(tablet) {
         width: max-content;
       }
-      @include screen(tablet-2x) {
+      @include min-screen(tablet-2x) {
         width: max-content;
       }
-      @include screen(laptop) {
+      @include min-screen(laptop) {
         width: max-content;
       }
-      @include screen(desktop) {
+      @include min-screen(desktop) {
         width: max-content;
       }
     }
