--- a/src/assets/styles/mixins/house-card.scss
+++ b/src/assets/styles/mixins/house-card.scss
@@ -4,13 +4,13 @@
   box-shadow: 0px 5px 20px 0px #26314108, 0px 1px 3px 1px #26314112;
   position: relative;
   min-height: 456px;
-  @include screen(tablet-2x) {
+  @include min-screen(tablet-2x) {
     min-height: 470px;
   }
-  @include screen(laptop) {
+  @include min-screen(laptop) {
     min-height: 470px;
   }
-  @include screen(desktop) {
+  @include min-screen(desktop) {
     min-height: 470px;
   }
 
@@ -24,13 +24,13 @@
   &__bg {
     height: 200px;
     width: 100%;
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       height: 240px;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       height: 240px;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       height: 240px;
     }
     img {
@@ -68,15 +68,15 @@
     padding: 16px;
     min-height: 256px;
     height: 256px;
-    @include screen(tablet-2x) {
+    @include min-screen(tablet-2x) {
       min-height: 230px;
       height: 230px;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       min-height: 230px;
       height: 230px;
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       min-height: 230px;
       height: 230px;
     }
@@ -94,12 +94,12 @@
     &:active {
       color: $orange-500;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       &:hover {
         color: $orange-500;
       }
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       &:hover {
         color: $orange-500;
       }
@@ -158,12 +158,12 @@
       text-align: center;
       color: $white;
     }
-    @include screen(laptop) {
+    @include min-screen(laptop) {
       &:hover {
         background-color: $orange-400;
       }
     }
-    @include screen(desktop) {
+    @include min-screen(desktop) {
       &:hover {
         background-color: $orange-400;
       }
