--- a/src/views/mixins/button-transparent.pug
+++ b/src/views/mixins/button-transparent.pug
@@ -1,3 +1,3 @@
-mixin button-transparent(name)
-  .button-transparent
+mixin button-transparent(name, buttonLink)
+  a.button-transparent(href="" +buttonLink)
     span= name
